feat: update message